# vellum

./: .gitignore  HACKATHON_SUBMISSION.md  NARRATION.md  ONEPAGE.md  README.md  SUMMARY.md  dev.sh
backend/: .env.example  e2e_day3.py  pyproject.toml  smoke_test.py
backend/tests/: conftest.py  test_agent_prompts.py  test_agent_status.py  test_agent_turns.py  test_api_auth.py  test_artifacts.py  test_compactor.py  test_config_cost.py  test_considered_and_rejected.py  test_day1_roundtrip.py  test_day2_autonomous.py  test_day2_smoke_auto_resolve.py  test_day3_lifecycle.py  test_db_migrations.py  test_dossier_extensions.py  test_intake.py  test_intake_e2e.py  test_investigation_log.py  test_jit_loading.py  test_orchestrator.py  test_plan_approval.py  test_plan_items.py  test_prompt_caching.py  test_resume.py  test_runtime_hooks.py  test_runtime_v2.py  test_self_heal.py  test_stuck.py  test_sub_completion_reliability.py  test_sub_investigations.py  test_sub_runtime.py  test_telemetry.py  test_tool_surface.py  test_trace_id.py  test_user_notes.py
backend/vellum/: config.py  db.py  lifecycle.py  main.py  models.py  schema.sql  storage.py
backend/vellum/agent/: compactor.py  orchestrator.py  prompt.py  runtime.py  scheduler.py  self_heal.py  stuck.py  sub_prompt.py  sub_runtime.py  telemetry.py
backend/vellum/api/: agent_routes.py  auth.py  intake_routes.py  routes.py  settings_routes.py
backend/vellum/intake/: models.py  prompt.py  runtime.py  storage.py  tools.py
backend/vellum/storage/: __init__.py  _helpers.py  artifact_store.py  budget_store.py  dossier_store.py  (+13 more)
(+89 files in other folders)
